# canteen

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.txt  publish.yml
canteen/: __init__.py  _asset.py  asset.py  condition.py  operations.py  outlet.py  plugin.py  plugins.py  reservoir.py
canteen/plugins/operations/: passive_outlets.py  pools.py  rayroberts.txt
canteen/plugins/outlets/: basic.py
canteen/plugins/reservoirs/: pools.py
notebooks/: asset.ipynb  folsom.ipynb  simple.ipynb
plugins/operations/: passive.py  pools.py
plugins/outlets/: basic.py
plugins/reservoirs/: basic.py  pools.py
src/: __init__.py
test/: test_data.py
tests/: test_asset.py  test_init.py  test_operations.py  test_outlet.py  test_pools.py  test_reservoir.py
