[tool.poetry]
name = "canteen"
version = "0.0.1"
description = "Detailed reservoir model."
authors = ["John Kucharski <johnkucharski@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.notebooks.dependencies]
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
matplotlib-label-lines = "^0.7.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
